@@ -28,6 +28,7 @@ installed_headers_DATA = \
 	ewl_radiobutton.h \
 	ewl_seeker.h \
 	ewl_selection.h \
+	ewl_separator.h \
 	ewl_spinner.h \
 	ewl_text.h \
 	ewl_table.h \
@@ -53,6 +54,7 @@ libewl_la_SOURCES = \
 	ewl_radiobutton.c \
 	ewl_seeker.c \
 	ewl_selection.c \
+	ewl_separator.c \
 	ewl_spinner.c \
 	ewl_table.c \
 	ewl_text.c \
