@@ -14,14 +14,15 @@ struct _ewl_separator
 	struct
 	{
 		int l, r, t, b;
-	} padd;
+	}
+	padd;
 };
 
 #define ewl_hseparator_new() ewl_separator_new(EWL_ORIENTATION_HORIZONTAL)
 #define ewl_vseparator_new() ewl_separator_new(EWL_ORIENTATION_VERTICAL)
 
 Ewl_Widget *ewl_separator_new(Ewl_Orientation o);
-void ewl_separator_set_padding(Ewl_Widget * w, int u, int l);
-void ewl_separator_set_fill_percentage(Ewl_Widget * w, double p);
+void ewl_separator_set_padding(Ewl_Widget * w, int l, int r, int t, int b);
+
 
 #endif /* __EWL_SEPARATOR_H__ */
